data/Java/01-missing-return-type/2/[M]Error.txt
*https://stackoverflow.com/questions/21868207/having-trouble-figuring-out-why-java-is-throwing-a-return-type-error
RectangleCalc.java:11: error: invalid method declaration; return type required
    public getArea() {
           ^